[project]
name = "memory-mcp-server"
version = "1.0.0"
description = "Servidor MCP memory em Python"
authors = [
    { name = "memory Team" }
]
readme = "README.md"
requires-python = ">=3.10"
keywords = ["mcp", "ai", "assistant"]

dependencies = [
    "mcp>=1.1.0",
    "click>=8.0",
    "anyio>=4.0",
    "starlette>=0.27",
    "uvicorn>=0.23",
    "httpx>=0.25"
]

[project.scripts]
memory-server = "memory_mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"